...
    <string name="title_open_campaign">View Campaign</string>

    <!-- ################### ELEMENTS #################### -->
    <string name="btn_login">LOG IN</string>
    <string name="btn_sign_in">CREATE ACCOUNT</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_create">CREATE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_ok">OK</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_open">OPEN</string>
    <string name="btn_confirmation_dialog_exit">LEAVE</string>
    <string name="btn_confirmation_dialog_cancel">CANCEL</string>
    <string name="btn_confirmation_dialog_delete">DELETE</string>
...
    <string name="hint_title_share_camping">Details for campaign</string>
    <string name="hint_key_camping">Campaign key (Ex: AQ-CB-XX)</string>


    <!-- ################### MSG #################### -->
    <string name="msg_failed_already_exists_friend">Error creating Friend/User login! Please try another login!</string>
    <string name="msg_failed_already_exists_user">Error creating User! Please try with another login or e-mail!</string>
    <string name="msg_failed_create_user">Error creating User! Follow screen steps!</string>
    <string name="msg_failed_create_campaign">Error creating Campaign! Follow screen steps!</string>
    <string name="msg_failed_update_campaign">Error updating Campaign! Follow screen steps!</string>
    <string name="msg_failed_login_user">Invalid login! Check if your user exists. Please try again!</string>
    <string name="msg_failed_login_friend">Invalid login! User registered as friend does not have access to this app! Please, create a new user!</string>
    <string name="msg_failed_key_campaign">Invalid Campaign Key! Check if the campaign exists!</string>
    <string name="msg_key_required">Campaign key is mandatory!</string>
    <string name="msg_username_required">Login is mandatory!</string>
    <string name="msg_mail_required">E-mail is mandatory!</string>
    <string name="msg_action_loading">Wait! Loading&#8230;</string>
    <string name="msg_action_saving">Wait! Saving&#8230;</string>
    <string name="msg_action_removing">Wait! Removing&#8230;</string>
    <string name="msg_action_login">Wait! Logging in&#8230;</string>
    <string name="msg_action_sign_in">Wait! Creating Account&#8230;</string>
    <string name="msg_blank_fragment">Under construction, check again later!</string>
...
